# glim

./: CMakeLists.txt  README.md
examples/hello/: CMakeLists.txt
examples/hello/src/: main.cpp
glim/: CMakeLists.txt
glim/include/glim/paint/: Primitives.h
glim/include/glim/paint/gl/: Buffer.h  Context.h  Shader.h  VertexArray.h
glim/include/glim/shell/macos/: Application.h  Event.h  RunLoop.h  Surface.h  Window.h
glim/include/glim/utils/: Assert.h
glim/src/paint/gl/: Buffer.cpp  Context.cpp  Shader.cpp  VertexArray.cpp
glim/src/shell/macos/: Application.mm  RunLoop.cpp  Surface.mm  Window.mm
